# FujiSim-private

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: gpu_pipeline.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache_cleanup.rs  cover_queue.rs  error.rs  ipc.rs  lib.rs  main.rs  queue.rs  state.rs  vips_io.rs
src-tauri/src/asset/: exif.rs  fileops.rs  scanner.rs
src-tauri/src/db/: albums.rs  app_settings.rs  asset_derivatives.rs  asset_render_cache.rs  assets.rs  mod.rs  preset_categories.rs  presets.rs  projects.rs  tasks.rs  user_fonts.rs  user_luts.rs  watermark_presets.rs  watermark_svgs.rs
src-tauri/src/export/: mod.rs  watermark_svg.rs
src-tauri/src/ipc/: albums.rs  app.rs  assets.rs  export.rs  fonts.rs  histogram.rs  luts.rs  mod.rs  presets.rs  preview.rs  projects.rs  settings.rs  watermark.rs
src-tauri/src/processing/: color.rs  curves.rs  dehaze.rs  foto.rs  grain.rs  histogram.rs  hsl_adjust.rs  lut.rs  mod.rs  pipeline.rs  raw.rs  saturation.rs  tone.rs  white_balance.rs
src-tauri/src/processing/gpu/: context.rs  curves_bake.rs  lut_cache.rs  mod.rs  passthrough.rs  uniforms.rs  upload.rs
src-tauri/src/processing/gpu/passes/: color_fused.rs  grain.rs  lut3d.rs  mod.rs  sharpen.rs
src-tauri/src/processing/gpu/shaders/: box_blur_h.wgsl  box_blur_mean_h.wgsl  box_blur_mean_v.wgsl  box_blur_min_h.wgsl  box_blur_min_v.wgsl  box_blur_v.wgsl  color_fused.wgsl  grain.wgsl  (+10 more)
(+255 files in other folders)
