[package]
name = "fujisim"
version = "1.0.1"
description = "High-fidelity Fujifilm film simulation desktop app"
authors = ["FujiSim Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "fujisim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros", "migrate"] }

libvips = "2.0.0"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
kamadak-exif = "0.6"
rsraw = "0.1.1"
walkdir = "2"
rayon = "1.10"

base64 = "0.22"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
splines = "5.0.0"
trash = "5"
indexmap = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
